package com.monsite.ventes.gestion_ventes.entity;

public enum Role {
    ADMIN,
    VENDEUR,
    CLIENT
}
